refact: use Set.of where applicable